testdata/operators/fail/operator_overload4.dws
// Ported from: reference/dwscript-original/Test/OperatorOverloadFail/operator_overload4.pas
// Purpose: Test incomplete operator declaration (missing return type and uses clause)
// Expected: Syntax error for missing colon

operator + (TObject, TObject) ;
